package org.bimserver.pb;

/******************************************************************************
 * Copyright (C) 2009-2019  BIMserver.org
 * 
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 * 
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see {@literal<http://www.gnu.org/licenses/>}.
 *****************************************************************************/
import "ServiceInterface.proto";
import "NewServicesInterface.proto";
import "AdminInterface.proto";
import "MetaInterface.proto";
option java_generic_services = true;

option java_outer_classname = "SettingsInterfaceImpl";

option optimize_for = SPEED;

service SettingsInterface {
	rpc getEmailSenderAddress (GetEmailSenderAddressRequest) returns (GetEmailSenderAddressResponse);

	rpc getProtocolBuffersPort (GetProtocolBuffersPortRequest) returns (GetProtocolBuffersPortResponse);

	rpc getServerSettings (GetServerSettingsRequest) returns (GetServerSettingsResponse);

	rpc getServiceRepositoryUrl (GetServiceRepositoryUrlRequest) returns (GetServiceRepositoryUrlResponse);

	rpc getSiteAddress (GetSiteAddressRequest) returns (GetSiteAddressResponse);

	rpc getSmtpServer (GetSmtpServerRequest) returns (GetSmtpServerResponse);

	rpc isAllowSelfRegistration (IsAllowSelfRegistrationRequest) returns (IsAllowSelfRegistrationResponse);

	rpc isAllowUsersToCreateTopLevelProjects (IsAllowUsersToCreateTopLevelProjectsRequest) returns (IsAllowUsersToCreateTopLevelProjectsResponse);

	rpc isCacheOutputFiles (IsCacheOutputFilesRequest) returns (IsCacheOutputFilesResponse);

	rpc isCheckinMergingEnabled (IsCheckinMergingEnabledRequest) returns (IsCheckinMergingEnabledResponse);

	rpc isGenerateGeometryOnCheckin (IsGenerateGeometryOnCheckinRequest) returns (IsGenerateGeometryOnCheckinResponse);

	rpc isHideUserListForNonAdmin (IsHideUserListForNonAdminRequest) returns (IsHideUserListForNonAdminResponse);

	rpc isPluginStrictVersionChecking (IsPluginStrictVersionCheckingRequest) returns (IsPluginStrictVersionCheckingResponse);

	rpc isSendConfirmationEmailAfterRegistration (IsSendConfirmationEmailAfterRegistrationRequest) returns (IsSendConfirmationEmailAfterRegistrationResponse);

	rpc setAllowSelfRegistration (SetAllowSelfRegistrationRequest) returns (VoidResponse);

	rpc setAllowUsersToCreateTopLevelProjects (SetAllowUsersToCreateTopLevelProjectsRequest) returns (VoidResponse);

	rpc setCacheOutputFiles (SetCacheOutputFilesRequest) returns (VoidResponse);

	rpc setCheckinMergingEnabled (SetCheckinMergingEnabledRequest) returns (VoidResponse);

	rpc setEmailSenderAddress (SetEmailSenderAddressRequest) returns (VoidResponse);

	rpc setGenerateGeometryOnCheckin (SetGenerateGeometryOnCheckinRequest) returns (VoidResponse);

	rpc setHideUserListForNonAdmin (SetHideUserListForNonAdminRequest) returns (VoidResponse);

	rpc setPluginStrictVersionChecking (SetPluginStrictVersionCheckingRequest) returns (VoidResponse);

	rpc setProtocolBuffersPort (SetProtocolBuffersPortRequest) returns (VoidResponse);

	rpc setSendConfirmationEmailAfterRegistration (SetSendConfirmationEmailAfterRegistrationRequest) returns (VoidResponse);

	rpc setServerDescription (SetServerDescriptionRequest) returns (VoidResponse);

	rpc setServerIcon (SetServerIconRequest) returns (VoidResponse);

	rpc setServerName (SetServerNameRequest) returns (VoidResponse);

	rpc setServerSettings (SetServerSettingsRequest) returns (VoidResponse);

	rpc setServiceRepositoryUrl (SetServiceRepositoryUrlRequest) returns (VoidResponse);

	rpc setSiteAddress (SetSiteAddressRequest) returns (VoidResponse);

	rpc setSmtpServer (SetSmtpServerRequest) returns (VoidResponse);

	rpc setWhiteListedDomains (SetWhiteListedDomainsRequest) returns (VoidResponse);

}

message GetEmailSenderAddressRequest {
}

message GetEmailSenderAddressResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message GetProtocolBuffersPortRequest {
}

message GetProtocolBuffersPortResponse {
	optional string errorMessage = 1;
	optional int32 value = 2;
}

message GetServerSettingsRequest {
}

enum SSmtpProtocol{
	SSmtpProtocol_SMTP = 0;
	SSmtpProtocol_SMTPS = 1;
	SSmtpProtocol_STARTTLS = 2;
}

message SServerSettings {
	optional bool allowCreateValidatedUser = 1;
	optional bool allowOnlyWhitelisted = 2;
	optional bool allowSelfRegistration = 3;
	optional bool allowUsersToCreateTopLevelProjects = 4;
	optional bool cacheOutputFiles = 5;
	optional bool checkinMergingEnabled = 6;
	optional int64 defaultRenderEnginePluginId = 7;
	optional string description = 8;
	optional string emailSenderAddress = 9;
	optional string emailSenderName = 10;
	optional bool generateGeometryOnCheckin = 11;
	optional bool hideUserListForNonAdmin = 12;
	optional string icon = 13;
	optional string name = 14;
	optional int64 oid = 15;
	optional bool optimizeMappedItems = 16;
	optional bool pluginStrictVersionChecking = 17;
	optional int32 protocolBuffersPort = 18;
	optional int32 renderEngineProcesses = 19;
	optional bool reuseGeometry = 20;
	optional int32 rid = 21;
	optional bool sendConfirmationEmailAfterRegistration = 22;
	optional bool sendEmailOnNewRevision = 23;
	optional string serviceRepositoryUrl = 24;
	optional int32 sessionTimeOutSeconds = 25;
	optional string siteAddress = 26;
	optional string smtpPassword = 27;
	optional int32 smtpPort = 28;
	optional SSmtpProtocol smtpProtocol = 29;
	optional string smtpServer = 30;
	optional string smtpUsername = 31;
	optional bool storeLastLogin = 32;
	optional bool storeServiceRuns = 33;
	optional UUID uuid = 34;
	optional int64 webModuleId = 35;
	repeated int64 webModules = 36;
	repeated string whitelistedDomains = 37;
}

message GetServerSettingsResponse {
	optional string errorMessage = 1;
	optional SServerSettings value = 2;
}

message GetServiceRepositoryUrlRequest {
}

message GetServiceRepositoryUrlResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message GetSiteAddressRequest {
}

message GetSiteAddressResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message GetSmtpServerRequest {
}

message GetSmtpServerResponse {
	optional string errorMessage = 1;
	optional string value = 2;
}

message IsAllowSelfRegistrationRequest {
}

message IsAllowSelfRegistrationResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsAllowUsersToCreateTopLevelProjectsRequest {
}

message IsAllowUsersToCreateTopLevelProjectsResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsCacheOutputFilesRequest {
}

message IsCacheOutputFilesResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsCheckinMergingEnabledRequest {
}

message IsCheckinMergingEnabledResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsGenerateGeometryOnCheckinRequest {
}

message IsGenerateGeometryOnCheckinResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsHideUserListForNonAdminRequest {
}

message IsHideUserListForNonAdminResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsPluginStrictVersionCheckingRequest {
}

message IsPluginStrictVersionCheckingResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message IsSendConfirmationEmailAfterRegistrationRequest {
}

message IsSendConfirmationEmailAfterRegistrationResponse {
	optional string errorMessage = 1;
	optional bool value = 2;
}

message SetAllowSelfRegistrationRequest {
	optional bool allowSelfRegistration = 1;
}

message SetAllowUsersToCreateTopLevelProjectsRequest {
	optional bool allowUsersToCreateTopLevelProjects = 1;
}

message SetCacheOutputFilesRequest {
	optional bool cacheOutputFiles = 1;
}

message SetCheckinMergingEnabledRequest {
	optional bool checkinMergingEnabled = 1;
}

message SetEmailSenderAddressRequest {
	optional string emailSenderAddress = 1;
}

message SetGenerateGeometryOnCheckinRequest {
	optional bool generateGeometryOnCheckin = 1;
}

message SetHideUserListForNonAdminRequest {
	optional bool hideUserListForNonAdmin = 1;
}

message SetPluginStrictVersionCheckingRequest {
	optional bool strict = 1;
}

message SetProtocolBuffersPortRequest {
	optional int32 port = 1;
}

message SetSendConfirmationEmailAfterRegistrationRequest {
	optional bool sendConfirmationEmailAfterRegistration = 1;
}

message SetServerDescriptionRequest {
	optional string strict = 1;
}

message SetServerIconRequest {
	optional string serverIcon = 1;
}

message SetServerNameRequest {
	optional string serverName = 1;
}

message SetServerSettingsRequest {
	optional SServerSettings serverSettings = 1;
}

message SetServiceRepositoryUrlRequest {
	optional string url = 1;
}

message SetSiteAddressRequest {
	optional string siteAddress = 1;
}

message SetSmtpServerRequest {
	optional string smtpServer = 1;
}

message SetWhiteListedDomainsRequest {
	repeated string domains = 1;
}

